--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -422,6 +422,10 @@ service drm /system/bin/drmserver
     user drm
     group system inet drmrpc
 
+service sysinit /system/bin/logwrapper /system/xbin/busybox run-parts /system/etc/init.d
+    disabled
+    oneshot
+
 service media /system/bin/mediaserver
     class main
     user media
