--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -422,9 +422,11 @@ service drm /system/bin/drmserver
     user drm
     group system inet drmrpc
 
-service sysinit /system/bin/logwrapper /system/xbin/busybox run-parts /system/etc/init.d
-    disabled
-    oneshot
+service userinit /system/xbin/busybox run-parts /system/etc/init.d
+	oneshot
+	class late_start
+	user root
+	group root
 
 service media /system/bin/mediaserver
     class main
