--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -438,6 +438,12 @@ service drm /system/bin/drmserver
     user drm
     group system inet drmrpc
 
+service userinit /system/xbin/busybox run-parts /system/etc/init.d
+    oneshot
+    class late_start
+    user root
+    group root
+
 service media /system/bin/mediaserver
     class main
     user media
@@ -469,6 +475,10 @@ service bluetoothd /system/bin/bluetoothd -n
 service installd /system/bin/installd
     class main
     socket installd stream 600 system system
+
+service flash_recovery /system/etc/install-recovery.sh
+    class main
+    oneshot
 
 service racoon /system/bin/racoon
     class main
